# Liagent_OS_V0.1.2

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README(EN).md  README(中文).md  README.md  SECURITY.md  SUPPORT.md  config.example.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_feedback.yml  feature_request.yml
docs/: architecture.md  current-limitations.md  getting-started.md  roadmap.md
models/: README.md
scripts/: create_public_snapshot.sh  release_audit.sh  tts_consistency_benchmark.py  tune_tts_params.py  weekly_metrics_report.py
tests/: README.md  conftest.py  test_anomaly_detector.py  test_audit_migration.py  test_behavior.py  test_brain_layers.py  test_brain_session_runtime.py  test_capability_inventory.py  test_chart_analysis.py  test_checkpoint.py  test_checkpoint_matcher.py  test_confidence.py  test_config_migration.py  test_core.py  test_cost_model.py  test_curated_catalog.py  test_embedder.py  test_engine_manager_llm_switch.py  test_engine_semaphore.py  test_engine_try_lock.py  test_events.py  test_evidence_trimming.py  test_experience_matching.py  test_failure_taxonomy.py  test_global_retry_budget.py  test_goal_loop.py  test_goal_store.py  test_grant_auth.py  test_health.py  test_heartbeat.py  test_heartbeat_trigger.py  test_interest.py  test_journal.py  test_l1_policy.py  test_main_model_validation.py  test_mcp_bridge.py  test_memory_compression.py  test_notification.py  test_pattern_grouping.py  test_planner_decompose.py  (+44 more)
(+148 files in other folders)
